src/tests/snapshots/niri__tests__window_opening__check_target_size@dhF500-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "default window height: F500\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 607 × 500, bounds: 1239 × 688, states: []

post-map configures:
size: 607 × 500, bounds: 1239 × 688, states: [Activated]
